--- a/pages/download.html
+++ b/pages/download.html
@@ -255,24 +255,24 @@
                         <span class="version-badge">Stable</span>
                     </div>
                     <div class="download-info">
-                        <p><i class="fas fa-calendar"></i> Дата выпуска: 15.10.2023</p>
+                        <p><i class="fas fa-calendar"></i> Дата выпуска: 04.04.2026</p>
                         <p><i class="fas fa-microchip"></i> Поддержка: DNA75/250, YiHi SX, GENE</p>
                         <p><i class="fas fa-star"></i> Функции: Все режимы, часы, игры, темы</p>
                         <p><i class="fas fa-language"></i> Языки: RU/EN</p>
                     </div>
                     <div class="download-size">4.7 MB</div>
                     <div class="download-stats">
-                        <span><i class="fas fa-download"></i> 2,845 загрузок</span>
-                        <span><i class="fas fa-check-circle"></i> Проверено</span>
+                        <span><i class="fas fa-download"></i> 0 загрузок</span>
+                        <span><i class="fas fa-check-circle"></i> Скоро</span>
                     </div>
                     <a href="../firmware/4missVape_2.1.bin" class="btn btn-primary btn-block" download>
                         <i class="fas fa-download"></i> Скачать прошивку 2.1
                     </a>
                     <div class="mirror-links">
                         <h4>Альтернативные ссылки:</h4>
-                        <a href="https://github.com/4missVape/firmware/releases/download/v2.1/4missVape_2.1.bin">GitHub</a>
-                        <a href="https://mega.nz/file/example#download">MEGA</a>
-                        <a href="https://yadi.sk/d/example">Яндекс.Диск</a>
+                        <a href="https://github.com/4missVape/firmware/releases/download#">GitHub</a>
+                        <a href="https://github.com/4missVape/firmware/releases/download#">MEGA</a>
+                        <a href="https://github.com/4missVape/firmware/releases/download#">Яндекс.Диск</a>
                     </div>
                 </div>
                 
